fixed z-index on modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -466,6 +466,7 @@ box-shadow: 0px 5px 0 #166194;
   width: 100%;
   text-align:center;
   display:none;
+  z-index:100;
 }
 
 .message {
